# maxima

./: .gitignore  ChangeLog  ChangeLog-5.42.md  ChangeLog-5.43.md  ChangeLog-Current.md  Dockerfile  Makefile.am  README.txt  build.sh  common-info.mk  common.mk  configure.ac  configure.in  maxima.spec.in
crosscompile-windows/: CMakeLists.txt  licenses.html  nightlytest.sh
crosscompile-windows/wxmaxima/: CMakeLists.txt
debian/: README  README.md  changelog  control  copyright  dpkg-genbuildinfo  maxima-clisp.install  maxima-common.install  maxima-common.postinst  maxima-common.postrm  maxima-doc.install  maxima-doc.postinst  maxima-ecl.install  maxima-emacs.install  maxima-gcl.install  maxima-sbcl.install  maxima.install  rules  source.lintian-overrides  triggers  watch
debian/patches/: 101-default-to-new-gnuplots.patch  102-repair-replace-all-without-matching-case.patch  series
debian/source/: include-binaries
debian/upstream/: metadata
doc/info/: .gitignore  Affine.pot  Affine.texi  Affine.texi.m4  Arrays.pot  Arrays.texi  Arrays.texi.m4  Atensor.pot  Atensor.texi  Atensor.texi.m4  Bugs.pot  Bugs.texi  Bugs.texi.m4  Command.pot  Command.texi  Command.texi.m4  Constants.pot  Constants.texi.m4  Ctensor.pot  Ctensor.texi  Ctensor.texi.m4  DataTypes.pot  DataTypes.texi  DataTypes.texi.m4  Database.pot  Database.texi  Database.texi.m4  Debugging.pot  Debugging.texi  Debugging.texi.m4  Deleted.texi.m4  Differential.pot  Differential.texi  Differential.texi.m4  Differentiation.pot  Differentiation.texi  Differentiation.texi.m4  Elliptic.pot  Elliptic.texi  Elliptic.texi.m4  (+276 more)
doc/info/de/: .gitignore  Affine.de.texi  Calculus.de.texi  Command.de.texi  Ctensor.de.texi  DataTypes.de.texi  Equations.de.texi  Glossary.de.texi  Groups.de.texi  Itensor.de.texi  Lists.de.texi  Makefile.am  Numerical.de.texi  Operators.de.texi  Plotting.de.texi  Polynomials.de.texi  Program.de.texi  Rules.de.texi  Symmetries.de.texi  asympa.de.texi  augmented_lagrangian.de.texi  bernstein.de.texi  bode.de.texi  category-macros.de.texi  celine.de.texi  celine.po  celine.texi  cobyla.de.texi  contrib_ode.de.texi  diag.de.texi  distrib.de.texi  draw.de.texi  drawdf.de.texi  dynamics.de.texi  ezunits.de.texi  f90.de.texi  finance.de.texi  fractals.de.texi  ggf.de.texi  graphs.de.texi  (+26 more)
doc/info/de.utf8/: .gitignore  Makefile.am
doc/info/en/: Introduction.texi  Makefile.am  Numerical.texi  Plotting.texi  graphs.texi  orthopoly.texi
doc/info/es/: Bugs.es.texi  Command.es.texi  Expressions.es.texi  Integration.es.texi  Makefile.am  Miscellaneous.es.texi  Number.es.texi  Polynomials.es.texi  draw.texi  graphs.texi  maxima.texi  plotdf.texi
doc/info/es.utf8/: Makefile.am  maxima.texi
doc/info/figures/: Makefile.am
doc/info/fr/: Makefile.am
doc/info/ja/: Makefile.am  Polynomials.texi
doc/info/pt/: Arrays.texi  Expressions.texi  Help.texi  Makefile.am  Plotting.texi  Polynomials.texi  maxima.texi  plotdf.texi
doc/info/pt.utf8/: .gitignore  Makefile.am  maxima.texi
doc/info/pt_BR/: Arrays.texi  Help.texi  Makefile.am  Polynomials.texi  maxima.texi  plotdf.texi
doc/info/pt_BR.utf8/: Makefile.am
doc/info/ru/: Makefile.am  include-maxima.texi.in  maxima.texi
interfaces/emacs/imaxima/: Makefile.am  Makefile.in  imaxima.lisp
interfaces/xmaxima/: Makefile.am
interfaces/xmaxima/Tkmaxima/: Bindings.tcl  Browser.tcl  Constants.tcl  Gui.tcl  Menu.tcl  Myhtml.tcl  Paths.tcl  Plotconf.tcl  Plotdf.tcl  Printops.tcl  RunMaxima.tcl
lisp-utils/: .gitignore  Makefile.am  defsystem.lisp  parse-info.lisp  parse-info.sh.in
locale/: es.po
share/: Makefile.am  builtins-list.txt
share/affine/: amacros.lisp  aquotient.lisp  dim-3.lisp  dim4-help.lisp  modsimp.lisp  polya.lisp  polyb.lisp  polyc.lisp  polyd.lisp  polysmp.lisp  sheafa.lisp  sheafb.lisp  sheafc.lisp
share/algebra/: nusum.mac
share/contrib/: contrib.texi  diag.mac  graph2d.lisp  opsubst.lisp  rtest_subst_more.mac  tex2ooo.lisp
share/contrib/ezunits/: physical_constants.mac
share/contrib/gentran/: global.lisp  intrfc.lisp  pre.lisp  vaxlsp.lisp
share/contrib/integration/: abs_integrate.mac  integration-index.lisp  rtest_abs_integrate.mac
share/contrib/lurkmathml/: mathml.lisp
share/contrib/maximaMathML/: PrMathML.lisp
share/contrib/namespaces/: namespaces.lisp
share/diffequations/: ode2.mac
share/draw/: draw-index.lisp  gnuplot.lisp
share/dynamics/: dynamics.mac  plotdf.lisp
share/hompack/: hompack-interface.lisp
share/hypergeometric/: abramowitz_id.mac  hypergeometric_mac.mac  nfloat.lisp
share/linearalgebra/: eigens-by-jacobi.lisp  linalg-utilities.lisp
share/logic/: logic-index.lisp
share/misc/: declin.mac
share/numeric/: aberth_roots.lisp  bffac.mac  fft-core.lisp
share/orthopoly/: orthopoly.lisp
share/pdiff/: rtest_pdiff.mac
share/pslq/: pslq_integer_relation.lisp
share/read_compressed_file/: deflate.lisp  in-memory.lisp  load-read_compressed_file.lisp  read_compressed_file.mac  read_compressed_file.system
share/simplification/: sqdnst.mac
share/solve_rec/: simplify_sum.mac  solve_rec.mac
share/stringproc/: pregexp.lisp  stringproc.lisp
share/sym/: chbase.lisp  schur.lisp  util.lisp
share/tensor/: itensor.lisp  symtry.lisp
share/to_poly_solve/: to_poly.lisp  to_poly_solve.mac  to_poly_solve_extra.lisp
share/trigonometry/: trgsmp.mac  trigrat.lisp
share/vector/: vector_rebuild.lisp
src/: Makefile.am  aberth.lisp  algsys.lisp  askp.lisp  asum.lisp  cl-info.lisp  clmacs.lisp  combin.lisp  comm.lisp  comm2.lisp  commac.lisp  command-line.lisp  compar.lisp  compat.lisp  cpoly.lisp  csimp.lisp  csimp2.lisp  defint.lisp  deflate.lisp  defmfun-check.lisp  displa.lisp  documentation.lisp  dskfn.lisp  ecl-depends.mk  ecl-port.lisp  ellipt.lisp  factor.lisp  float.lisp  fortra.lisp  generr.lisp  global-var-init.lisp  globals.lisp  gnuplot_def.lisp  hayat.lisp  hyp.lisp  hypgeo.lisp  info-documentation.lisp  init-cl.lisp  intl.lisp  laplac.lisp  (+67 more)
tests/: Makefile.am  rtest1.mac  rtest2.mac  rtest9a.mac  rtest_boolean.mac  rtest_elliptic.mac  rtest_subst.mac  rtestode.mac  testsuite.lisp
(+4 files in other folders)
