MAKEINFOFLAGS = --enable-encoding

lang = de
langsdir = /de

# All files that are translated using the .po file
info_posource = celine.xml zeilberger.xml unit.xml Affine.xml asympa.xml
info_posource += augmented_lagrangian.xml bernstein.xml bode.xml cobyla.xml contrib_ode.xml
info_posource += diag.xml distrib.xml draw.xml drawdf.xml dynamics.xml ezunits.xml
info_posource += f90.xml finance.xml fractals.xml ggf.xml graphs.xml grobner.xml Groups.xml
info_posource += impdiff.xml interpol.xml lapack.xml lbfgs.xml lindstedt.xml linearalgebra.xml
info_posource += lsquares.xml makeOrders.xml minpack.xml numericalio.xml opsubst.xml
info_posource += orthopoly.xml romberg.xml simplex.xml simplifications.xml
info_posource += solve_rec.xml stats.xml stirling.xml Symmetries.xml to_poly_solve.xml
info_posource += Deleted.xml
info_posource += Differential.xml
info_posource += Differentiation.xml
info_posource += Elliptic.xml
info_posource += Integration.xml
info_posource += Limits.xml
info_posource += bitwise.xml
info_posource += clebsch_gordan.xml
info_posource += combinatorics.xml
info_posource += defstruct.xml
info_posource += engineering-format.xml
info_posource += errormessages.xml
info_posource += operatingsystem.xml
info_posource += ratpow.xml
info_posource += wrstcse.xml

# The following line fails due to weird characters.
#
# info_posource += alt-display.xml

info_TEXINFOS = maxima.texi
maxima_TEXINFOS = include-maxima.de.texi category-macros.de.texi \
Introduction.de.texi Bugs.de.texi Help.de.texi Command.de.texi \
DataTypes.de.texi Constants.de.texi Lists.de.texi Arrays.de.texi \
defstruct.de.texi Expressions.de.texi Operators.de.texi Evaluation.de.texi \
Simplification.de.texi MathFunctions.de.texi Database.de.texi Plotting.de.texi \
Input.de.texi Nset.de.texi Series.de.texi Calculus.de.texi \
Polynomials.de.texi Equations.de.texi Matrices.de.texi Itensor.de.texi \
Ctensor.de.texi Atensor.de.texi Special.de.texi Numerical.de.texi \
Runtime.de.texi Rules.de.texi Function.de.texi Program.de.texi \
Translator.de.texi Debugging.de.texi Miscellaneous.de.texi \
abs_integrate.de.texi \
Affine.de.texi asympa.de.texi augmented_lagrangian.de.texi \
bernstein.de.texi bode.de.texi \
cobyla.de.texi contrib_ode.de.texi descriptive.de.texi \
diag.de.texi distrib.de.texi draw.de.texi drawdf.de.texi dynamics.de.texi \
ezunits.de.texi f90.de.texi finance.de.texi fractals.de.texi ggf.de.texi \
graphs.de.texi grobner.de.texi \
Groups.de.texi impdiff.de.texi interpol.de.texi lapack.de.texi lbfgs.de.texi \
lindstedt.de.texi linearalgebra.de.texi lsquares.de.texi makeOrders.de.texi \
minpack.de.texi mnewton.de.texi numericalio.de.texi opsubst.de.texi \
orthopoly.de.texi plotdf.de.texi romberg.de.texi simplex.de.texi \
simplifications.de.texi solve_rec.de.texi stats.de.texi stirling.de.texi \
stringproc.de.texi Symmetries.de.texi to_poly_solve.de.texi unit.de.texi \
zeilberger.de.texi \
Glossary.de.texi Number.de.texi Indices.de.texi

include ../common-lang.mk

EXTRA_DIST += extract_categories1.awk extract_categories1.sed extract_categories.sh manual.css texi2html.init
