include $(top_srcdir)/common.mk
EXTRA_DIST = imaxima.lisp imaxima.el imath.el imath-example imaxima-autoconf-variables.el setup-imaxima-imath.el
emacs_DATA = imaxima.el imath.el imaxima.lisp imaxima-autoconf-variables.el
ELCFILES = imaxima.elc imath.elc imaxima-autoconf-variables.elc
info_TEXINFOS = imaxima.texi
